refactor: limpa codigo morto, atualiza streams e substitui console logs por slf4j logger