@@ -138,7 +138,7 @@ public class AvaliacaoService {
                 .filter(aval -> aval.getCriador().getArea() != null &&
                                 Objects.equals(aval.getCriador().getArea().getCodigo(), usuarioLogado.getAreaId()))
                 .map(AvaliacaoResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         // Regra do Perfil 2 (Supervisor)
@@ -152,7 +152,7 @@ public class AvaliacaoService {
                 // 3. Filtra para ver APENAS as que ele mesmo criou
                 .filter(aval -> Objects.equals(aval.getCriador().getCodigo(), usuarioLogado.getCodigo()))
                 .map(AvaliacaoResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
         }
 
         // Se não for nenhum dos dois (ex: USER), retorna lista vazia
@@ -188,7 +188,7 @@ public class AvaliacaoService {
 
         return avaliacaoFuncionarioRepository.findByAvaliacaoCodigo(avaliacaoId).stream()
                .map(AvaliacaoFuncionarioResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
     // --- MÉTODO ATUALIZADO ---
@@ -203,7 +203,7 @@ public class AvaliacaoService {
 
         return respostaColaboradorRepository.findByAvaliacaoFuncionarioCodigo(instanciaId).stream()
                .map(RespostaColaboradorResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
 
@@ -225,11 +225,9 @@ public class AvaliacaoService {
 
         // Se for Supervisor (GESTOR), verifica se ele é o criador
         if (usuarioLogado.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals(ROLE_GESTOR)) &&
-            !usuarioLogado.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals(ROLE_ADMIN))) {
-
-            if (!Objects.equals(criadorAvaliacaoId, usuarioLogadoId)) {
-                throw new UnauthorizedActionException("Permissão negada. Supervisores só podem ver avaliações que eles mesmos criaram.");
-            }
+            !usuarioLogado.getAuthorities().stream().anyMatch(a -> a.getAuthority().equals(ROLE_ADMIN)) &&
+            !Objects.equals(criadorAvaliacaoId, usuarioLogadoId)) {
+            throw new UnauthorizedActionException("Permissão negada. Supervisores só podem ver avaliações que eles mesmos criaram.");
         }
 
         // Se for Admin da mesma área, passa.
@@ -324,7 +322,7 @@ public class AvaliacaoService {
         return avaliacaoFuncionarioRepository.findByFuncionarioCodigo(funcionarioId).stream()
                .filter(af -> "PENDENTE".equals(af.getResultadoStatus()))
                .map(AvaliacaoFuncionarioResponseDTO::new)
-               .collect(Collectors.toList());
+               .toList();
     }
 
      @Transactional(readOnly = true)
@@ -365,11 +363,11 @@ public class AvaliacaoService {
 
             return RevisaoDetalhadaDTO.builder()
                 .perguntaId(resp.getPergunta().getCodigo())
-                .perguntaTexto(resp.getPergunta().getPergunta())
+                .perguntaTexto(resp.getPergunta().getTextoPergunta())
                 .respostaDada(resp.getRespostaTexto())
                 .opcaoSelecionadaId(idOpcao) // Usa a variável que calculamos acima
                 .build();
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
 
