@@ -21,6 +21,8 @@ import jakarta.persistence.EntityNotFoundException;
 @Service
 public class PerguntaService {
 
+    private static final org.slf4j.Logger logger = org.slf4j.LoggerFactory.getLogger(PerguntaService.class);
+
     private final PerguntaRepository perguntaRepository;
     private final CompetenciaRepository competenciaRepository;
 
@@ -35,7 +37,7 @@ public class PerguntaService {
                 .orElseThrow(() -> new EntityNotFoundException("Competência não encontrada: " + dto.competenciaCodigo()));
 
         Pergunta novaPergunta = new Pergunta();
-        novaPergunta.setPergunta(dto.pergunta());
+        novaPergunta.setTextoPergunta(dto.pergunta());
         novaPergunta.setCompetencia(competencia);
         novaPergunta.setTipoPergunta(dto.tipoPergunta()); 
 
@@ -44,7 +46,7 @@ public class PerguntaService {
         boolean isMultipla = tipo.contains("múltipla") || tipo.contains("multipla");
 
         if (isMultipla && dto.opcoes() != null && !dto.opcoes().isEmpty()) {
-            System.out.println(">>> Processando " + dto.opcoes().size() + " opções recebidas.");
+            logger.info(">>> Processando {} opções recebidas.", dto.opcoes().size());
             
             Set<PerguntaOpcao> opcoesSet = new HashSet<>();
             
@@ -63,12 +65,12 @@ public class PerguntaService {
             }
             novaPergunta.setOpcoes(opcoesSet);
         } else {
-             System.out.println(">>> Não é múltipla escolha ou não há opções válidas. Tipo recebido: " + tipo);
+             logger.info(">>> Não é múltipla escolha ou não há opções válidas. Tipo recebido: {}", tipo);
         }
 
-        System.out.println(">>> Salvando Pergunta no repositório..."); 
+        logger.info(">>> Salvando Pergunta no repositório..."); 
         Pergunta perguntaSalva = perguntaRepository.save(novaPergunta);
-        System.out.println(">>> Pergunta salva com código: " + perguntaSalva.getCodigo()); 
+        logger.info(">>> Pergunta salva com código: {}", perguntaSalva.getCodigo()); 
 
         return new PerguntaResponseDTO(perguntaSalva);
     }
@@ -77,7 +79,7 @@ public class PerguntaService {
     public List<PerguntaResponseDTO> listarTodas() {
         return perguntaRepository.findAll().stream()
                 .map(PerguntaResponseDTO::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
      
